check error and fix theme

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home - eCommerce Template 2</title>
+    <title>Home | Gini-eCom</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/template-2/images/favicon.png">
 
     <!-- all css here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -85,7 +85,7 @@
                     <div class="col-md-3 col-6">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>template 2</h1>
+                                <h1>logo</h1>
                                 <!--<img src="assets/img/logo/logo.png" alt="" />-->
                             </a>
                         </div>
@@ -503,10 +503,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -641,10 +641,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -776,10 +776,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -911,10 +911,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1091,10 +1091,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1232,10 +1232,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1373,10 +1373,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1514,10 +1514,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1843,7 +1843,7 @@
                                     </ul>
                                 </nav>
                             </div>
-                            <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://ginilab.com/"
+                            <p>Copyright <i class="fa fa-copyright"></i> 2019 <a href="https://ginilab.com/"
                                                                                  target="_blank">Ginilab LTD</a>
                                 All rights reserved. </p>
                         </div>
