--- a/product-details.html
+++ b/product-details.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Product details- eCommerce Template-2</title>
+    <title>Product details- Gini-eCom</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/template-2/images/favicon.png">
 
 
     <!-- all css here -->
@@ -88,7 +88,7 @@
                     <div class="col-md-3 col-6">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>template 2</h1>
+                                <h1>logo</h1>
                                 <!--<img src="assets/img/logo/logo.png" alt="" />-->
                             </a>
                         </div>
@@ -339,11 +339,11 @@
                         <!-- Images -->
                         <div class="exzoom_img_box">
                             <ul class='exzoom_img_ul'>
-                                <li><img src="assets/template-2/images/feat-1.1.jpg"/></li>
-                                <li><img src="assets/template-2/images/feat-2.jpg"/></li>
-                                <li><img src="assets/template-2/images/feat-3.jpg"/></li>
-                                <li><img src="assets/template-2/images/feat-4.jpg"/></li>
-                                <li><img src="assets/template-2/images/feat-5.jpg"/></li>
+                                <li><img src="assets/template-2/images/feat-1.1.jpg" alt=""/></li>
+                                <li><img src="assets/template-2/images/feat-2.jpg" alt=""/></li>
+                                <li><img src="assets/template-2/images/feat-3.jpg" alt=""/></li>
+                                <li><img src="assets/template-2/images/feat-4.jpg" alt=""/></li>
+                                <li><img src="assets/template-2/images/feat-5.jpg" alt=""/></li>
                             </ul>
                         </div>
                         <!-- <a href="https://www.jqueryscript.net/tags.php?/Thumbnail/">Thumbnail</a> Nav-->
@@ -456,7 +456,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="product-tab">
-                        <ul class="nav nav-tabs">
+                        <ul class="nav nav-tabs" role="tablist">
                             <li>
                                 <a class="active" data-toggle="tab" href="#description">description</a>
                             </li>
@@ -660,10 +660,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -800,10 +800,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -940,10 +940,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1080,10 +1080,10 @@
                                         <div class="row">
                                             <div class="col-md-5">
                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                 </div>
                                             </div>
                                             <div class="col-md-7">
@@ -1206,7 +1206,7 @@
                                     </ul>
                                 </nav>
                             </div>
-                            <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://ginilab.com/"
+                            <p>Copyright <i class="fa fa-copyright"></i> 2019 <a href="https://ginilab.com/"
                                                                                  target="_blank">Ginilab LTD</a>
                                 All rights reserved. </p>
                         </div>
@@ -1239,7 +1239,6 @@
 <script src="assets/js/jquery.counterup.min.js"></script>
 <script src="assets/js/waypoints.min.js"></script>
 <script src="assets/js/slinky.min.js"></script>
-<script src="assets/js/ajax-mail.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/plugins.js"></script>
 
