--- a/register.html
+++ b/register.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Registration - eCommerce template-2</title>
+        <title>Registration | Gini-eCom</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/template-2/images/favicon.png">
 		
 		<!-- all css here -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -84,7 +84,7 @@
                             <div class="col-md-3 col-6">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <h1>template 2</h1>
+                                        <h1>logo</h1>
                                         <!--<img src="assets/img/logo/logo.png" alt="" />-->
                                     </a>
                                 </div>
@@ -387,7 +387,7 @@
                                             </ul>
                                         </nav>
                                     </div>
-                                    <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://ginilab.com/"
+                                    <p>Copyright <i class="fa fa-copyright"></i> 2019 <a href="https://ginilab.com/"
                                                                                          target="_blank">Ginilab LTD</a>
                                         All rights reserved. </p>
                                 </div>
@@ -419,7 +419,6 @@
         <script src="assets/js/jquery.counterup.min.js"></script>
         <script src="assets/js/waypoints.min.js"></script>
         <script src="assets/js/slinky.min.js"></script>
-        <script src="assets/js/ajax-mail.js"></script>
         <script src="assets/js/owl.carousel.min.js"></script>
         <script src="assets/js/plugins.js"></script>
         <script type="text/javascript">
