--- a/shop.html
+++ b/shop.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Template-1 | shop</title>
+    <title>Shop | Gini-eCom</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/template-2/images/favicon.png">
 
     <!-- all css here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -87,7 +87,7 @@
                     <div class="col-md-3 col-6">
                         <div class="logo">
                             <a href="index.html">
-                                <h1>template 2</h1>
+                                <h1>logo</h1>
                                 <!--<img src="assets/img/logo/logo.png" alt="" />-->
                             </a>
                         </div>
@@ -587,10 +587,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -754,10 +754,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -921,10 +921,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1088,10 +1088,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1255,10 +1255,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1422,10 +1422,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1589,10 +1589,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1756,10 +1756,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -1923,10 +1923,10 @@
                                                         <div class="row">
                                                             <div class="col-md-5">
                                                                 <div class="product-thumb popup-product-slier owl-carousel">
-                                                                    <img src="assets/template-2/images/feat-2.1.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.2.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.3.jpg"/>
-                                                                    <img src="assets/template-2/images/feat-2.4.jpg"/>
+                                                                    <img src="assets/template-2/images/feat-2.1.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.2.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.3.jpg" alt=""/>
+                                                                    <img src="assets/template-2/images/feat-2.4.jpg" alt=""/>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-7">
@@ -2434,7 +2434,7 @@
                                     </ul>
                                 </nav>
                             </div>
-                            <p>Copyright <i class="fa fa-copyright"></i> 2018 <a href="https://ginilab.com/"
+                            <p>Copyright <i class="fa fa-copyright"></i> 2019 <a href="https://ginilab.com/"
                                                                                  target="_blank">Ginilab LTD</a>
                                 All rights reserved. </p>
                         </div>
@@ -2467,7 +2467,6 @@
 <script src="assets/js/jquery.counterup.min.js"></script>
 <script src="assets/js/waypoints.min.js"></script>
 <script src="assets/js/slinky.min.js"></script>
-<script src="assets/js/ajax-mail.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
 <script src="assets/js/plugins.js"></script>
 <script type="text/javascript">
